<resources>
    <string name="app_name" translatable="false">qBitController</string>
    <string name="language_code">en</string>
    <string name="share_add_torrent">Add Torrent</string>
    <string name="torrent_status_error">Error</string>
    <string name="torrent_status_missing_files">Missing Files</string>
    <string name="torrent_status_seeding">Seeding</string>
    <string name="torrent_status_paused">Paused</string>
    <string name="torrent_status_queued">Queued</string>
    <string name="torrent_status_stalled">Stalled</string>
    <string name="torrent_status_checking">Checking</string>
    <string name="torrent_status_completed">Completed</string>
    <string name="torrent_status_force_seeding">[F] Seeding</string>
    <string name="torrent_status_downloading">Downloading</string>
    <string name="torrent_status_checking_resume_data">Checking Resume Data</string>
    <string name="torrent_status_downloading_metadata">Downloading Metadata</string>
    <string name="torrent_status_force_downloading_metadata">[F] Downloading Metadata</string>
    <string name="torrent_status_force_downloading">[F] Downloading</string>
    <string name="torrent_status_moving">Moving</string>
    <string name="torrent_status_unknown">Unknown</string>
    <string name="eta_seconds">%1$ss</string>
    <string name="eta_minutes_seconds">%1$sm %2$ss</string>
    <string name="eta_minutes">%1$sm</string>
    <string name="eta_hours_minutes">%1$sh %2$sm</string>
    <string name="eta_hours">%1$sh</string>
    <string name="eta_days_hours">%1$sd %2$sh</string>
    <string name="eta_days">%1$sd</string>
    <string name="size_format">%1$s %2$s</string>
    <string name="size_bytes">B</string>
    <string name="size_kibibytes">KiB</string>
    <string name="size_mebibytes">MiB</string>
    <string name="size_gibibytes">GiB</string>
    <string name="size_tebibytes">TiB</string>
    <string name="size_pebibytes">PiB</string>
    <string name="size_exbibytes">EiB</string>
    <string name="speed_format">%1$s %2$s</string>
    <string name="speed_bytes_per_second">B/s</string>
    <string name="speed_kibibytes_per_second">KiB/s</string>
    <string name="speed_mebibytes_per_second">MiB/s</string>
    <string name="speed_gibibytes_per_second">GiB/s</string>
    <string name="error_invalid_credentials">Invalid username or password.</string>
    <string name="error_banned">You have been banned because of too many failed login attempts.</string>
    <string name="error_cannot_connect">Cannot connect to server.</string>
    <string name="error_unknown_host">Unknown host.</string>
    <string name="error_timeout">Connection timed out.</string>
    <string name="error_no_data">Server didn\'t send any data.</string>
    <string name="error_unknown_login_response">Unknown login response: %1$s</string>
    <string name="error_unknown">Unknown error: %1$s</string>
    <string name="error_api">API returned an error: %1$d</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_inverse">Select Inverse</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_action_about">About</string>
    <string name="torrent_list_no_server_title">No Servers Available</string>
    <string name="torrent_list_no_server_description">You haven\'t added any servers yet. Add one to get started.</string>
    <string name="torrent_list_no_server_add">Add Server</string>
    <string name="torrent_list_empty_title">No Torrents Found</string>
    <string name="torrent_list_empty_description">You don\'t have any torrents. Add one to get started.</string>
    <string name="torrent_list_empty_rss">Add via RSS</string>
    <string name="torrent_list_empty_search">Search Torrents</string>
    <string name="torrent_list_empty_add">Add Torrent</string>
    <string name="torrent_list_no_result_title">No Results Found</string>
    <string name="torrent_list_no_result_description">No torrents match your current filters. Try adjusting your filters or search criteria.</string>
    <string name="torrent_list_no_result_reset">Reset Filters</string>
    <string name="torrent_list_action_add_torrent">Add Torrent</string>
    <string name="torrent_list_action_rss">RSS</string>
    <string name="torrent_list_action_search_online">Search Online</string>
    <string name="torrent_list_action_statistics">Statistics</string>
    <string name="torrent_list_action_execution_log">Execution Log</string>
    <string name="torrent_list_action_shutdown">Quit qBittorrent</string>
    <string name="torrent_list_action_sort">Sort</string>
    <string name="torrent_list_action_sort_name">Name</string>
    <string name="torrent_list_action_sort_status">Status</string>
    <string name="torrent_list_action_sort_hash">Hash</string>
    <string name="torrent_list_action_sort_download_speed">Download Speed</string>
    <string name="torrent_list_action_sort_upload_speed">Upload Speed</string>
    <string name="torrent_list_action_sort_priority">Priority</string>
    <string name="torrent_list_action_sort_eta">ETA</string>
    <string name="torrent_list_action_sort_size">Size</string>
    <string name="torrent_list_action_sort_progress">Progress</string>
    <string name="torrent_list_action_sort_ratio">Ratio</string>
    <string name="torrent_list_action_sort_connected_seeds">Connected Seeds</string>
    <string name="torrent_list_action_sort_total_seeds">Total Seeds</string>
    <string name="torrent_list_action_sort_connected_leeches">Connected Leeches</string>
    <string name="torrent_list_action_sort_total_leeches">Total Leeches</string>
    <string name="torrent_list_action_sort_addition_date">Addition Date</string>
    <string name="torrent_list_action_sort_completion_date">Completion Date</string>
    <string name="torrent_list_action_sort_last_activity">Last Activity</string>
    <string name="torrent_list_action_sort_reverse">Reverse</string>
    <string name="torrent_list_action_pause">Pause</string>
    <string name="torrent_list_action_resume">Resume</string>
    <string name="torrent_list_action_delete">Delete</string>
    <string name="torrent_list_action_priority">Priority</string>
    <string name="torrent_list_action_priority_increase">Increase Priority</string>
    <string name="torrent_list_action_priority_decrease">Decrease Priority</string>
    <string name="torrent_list_action_priority_maximize">Maximize Priority</string>
    <string name="torrent_list_action_priority_minimize">Minimize Priority</string>
    <string name="torrent_list_action_set_location">Set Location</string>
    <string name="torrent_list_action_set_category">Set Category</string>
    <plurals name="torrent_list_delete_torrents">
        <item quantity="one">Delete %1$d Torrent</item>
        <item quantity="other">Delete %1$d Torrents</item>
    </plurals>
    <plurals name="torrent_list_torrents_delete_success">
        <item quantity="one">%1$d torrent deleted successfully.</item>
        <item quantity="other">%1$d torrents deleted successfully.</item>
    </plurals>
    <plurals name="torrent_list_torrents_pause_success">
        <item quantity="one">%1$d torrent paused successfully.</item>
        <item quantity="other">%1$d torrents paused successfully.</item>
    </plurals>
    <plurals name="torrent_list_torrents_resume_success">
        <item quantity="one">%1$d torrent resumed successfully.</item>
        <item quantity="other">%1$d torrents resumed successfully.</item>
    </plurals>
    <plurals name="torrent_list_torrents_selected">
        <item quantity="one">%1$d torrent selected</item>
        <item quantity="other">%1$d torrents selected</item>
    </plurals>
    <string name="torrent_list_search_torrents">Search torrents…</string>
    <string name="torrent_list_free_space">Free space: %1$s</string>
    <string name="torrent_list_set_location_hint">Save Path</string>
    <string name="torrent_list_category_tag_all">All</string>
    <string name="torrent_list_uncategorized">Uncategorized</string>
    <string name="torrent_list_untagged">Untagged</string>
    <string name="torrent_list_category_tag_format">%1$s (%2$d)</string>
    <string name="torrent_list_categories">Categories</string>
    <string name="torrent_list_create_subcategory">Create Subcategory</string>
    <string name="torrent_list_create_category">Create Category</string>
    <string name="torrent_list_edit_category">Edit Category</string>
    <string name="torrent_list_delete_category">Delete Category</string>
    <string name="torrent_list_delete_category_confirm">Are you sure you want to delete category %1$s?</string>
    <string name="torrent_list_delete_category_success">Category %1$s deleted successfully.</string>
    <string name="torrent_list_create_category_success">Category created successfully.</string>
    <string name="torrent_list_status">Status</string>
    <string name="torrent_list_status_all">All</string>
    <string name="torrent_list_status_downloading">Downloading</string>
    <string name="torrent_list_status_seeding">Seeding</string>
    <string name="torrent_list_status_completed">Completed</string>
    <string name="torrent_list_status_resumed">Resumed</string>
    <string name="torrent_list_status_paused">Paused</string>
    <string name="torrent_list_status_stalled">Stalled</string>
    <string name="torrent_list_status_checking">Checking</string>
    <string name="torrent_list_status_moving">Moving</string>
    <string name="torrent_list_status_error">Error</string>
    <string name="torrent_action_pause">Pause</string>
    <string name="torrent_action_resume">Resume</string>
    <string name="torrent_action_delete">Delete</string>
    <string name="torrent_action_options">Torrent Options</string>
    <string name="torrent_action_category">Set Category</string>
    <string name="torrent_action_tags">Set Tags</string>
    <string name="torrent_action_rename_torrent">Rename Torrent</string>
    <string name="torrent_action_force_recheck">Force Recheck</string>
    <string name="torrent_action_force_reannounce">Force Reannounce</string>
    <string name="torrent_action_force_start">Force Start</string>
    <string name="torrent_action_super_seeding">Super Seeding</string>
    <string name="torrent_action_copy">Copy</string>
    <string name="torrent_action_copy_name">Name</string>
    <string name="torrent_action_copy_hash_v1">Hash v1</string>
    <string name="torrent_action_copy_hash_v2">Hash v2</string>
    <string name="torrent_action_copy_magnet_uri">Magnet URI</string>
    <string name="torrent_action_export">Export .torrent</string>
    <string name="torrent_trackers_action_delete">Delete</string>
    <string name="torrent_trackers_action_edit">Edit Tracker</string>
    <string name="rss_action_mark_all_as_read">Mark All as Read</string>
    <string name="rss_action_refresh">Refresh</string>
    <string name="search_start_query">Search Query</string>
    <string name="search_start_category">Category</string>
    <string name="search_start_plugins_enabled">Enabled Plugins</string>
    <string name="search_start_plugins_all">All Plugins</string>
    <string name="search_start_plugins_select">Select Plugins</string>
    <string name="search_result_action_filter">Filter</string>
    <string name="search_result_action_sort">Sort</string>
    <string name="search_result_action_sort_name">Name</string>
    <string name="search_result_action_sort_size">Size</string>
    <string name="search_result_action_sort_seeders">Seeders</string>
    <string name="search_result_action_sort_leechers">Leechers</string>
    <string name="search_result_action_sort_search_engine">Search Engine</string>
    <string name="search_result_action_sort_reverse">Reverse</string>
    <string name="search_result_action_stop_search">Stop Search</string>
</resources>