<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/torrent_list_action_add_torrent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_rss"
        android:icon="@drawable/ic_rss"
        android:title="@string/torrent_list_action_rss"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_plugin_search"
        android:icon="@drawable/ic_search_online"
        android:title="@string/torrent_list_action_search_online"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/torrent_list_action_statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_log"
        android:icon="@drawable/ic_log"
        android:title="@string/torrent_list_action_execution_log"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_speed_limit_mode"
        android:checkable="true"
        android:title="@string/torrent_list_action_alternative_speed_limits"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_shutdown"
        android:title="@string/torrent_list_action_shutdown"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/torrent_list_action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/torrent_list_action_sort_name" />
                <item
                    android:id="@+id/menu_sort_status"
                    android:title="@string/torrent_list_action_sort_status" />
                <item
                    android:id="@+id/menu_sort_hash"
                    android:title="@string/torrent_list_action_sort_hash" />
                <item
                    android:id="@+id/menu_sort_dlspeed"
                    android:title="@string/torrent_list_action_sort_download_speed" />
                <item
                    android:id="@+id/menu_sort_upspeed"
                    android:title="@string/torrent_list_action_sort_upload_speed" />
                <item
                    android:id="@+id/menu_sort_priority"
                    android:title="@string/torrent_list_action_sort_priority" />
                <item
                    android:id="@+id/menu_sort_eta"
                    android:title="@string/torrent_list_action_sort_eta" />
                <item
                    android:id="@+id/menu_sort_size"
                    android:title="@string/torrent_list_action_sort_size" />
                <item
                    android:id="@+id/menu_sort_progress"
                    android:title="@string/torrent_list_action_sort_progress" />
                <item
                    android:id="@+id/menu_sort_ratio"
                    android:title="@string/torrent_list_action_sort_ratio" />
                <item
                    android:id="@+id/menu_sort_connected_seeds"
                    android:title="@string/torrent_list_action_sort_connected_seeds" />
                <item
                    android:id="@+id/menu_sort_total_seeds"
                    android:title="@string/torrent_list_action_sort_total_seeds" />
                <item
                    android:id="@+id/menu_sort_connected_leeches"
                    android:title="@string/torrent_list_action_sort_connected_leeches" />
                <item
                    android:id="@+id/menu_sort_total_leeches"
                    android:title="@string/torrent_list_action_sort_total_leeches" />
                <item
                    android:id="@+id/menu_sort_addition_date"
                    android:title="@string/torrent_list_action_sort_addition_date" />
                <item
                    android:id="@+id/menu_sort_completion_date"
                    android:title="@string/torrent_list_action_sort_completion_date" />
                <item
                    android:id="@+id/menu_sort_last_activity"
                    android:title="@string/torrent_list_action_sort_last_activity" />
            </group>
            <item
                android:id="@+id/menu_sort_reverse"
                android:checkable="true"
                android:title="@string/torrent_list_action_sort_reverse" />
        </menu>
    </item>

</menu>
