<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_pause"
        android:icon="@drawable/ic_pause"
        android:orderInCategory="1"
        android:title="@string/torrent_action_pause"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/menu_resume"
        android:icon="@drawable/ic_resume"
        android:orderInCategory="1"
        android:title="@string/torrent_action_resume"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="1"
        android:title="@string/torrent_action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_options"
        android:orderInCategory="1"
        android:title="@string/torrent_action_options"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_category"
        android:orderInCategory="1"
        android:title="@string/torrent_action_category"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_tags"
        android:orderInCategory="1"
        android:title="@string/torrent_action_tags"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_rename"
        android:orderInCategory="1"
        android:title="@string/torrent_action_rename_torrent"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_recheck"
        android:orderInCategory="1"
        android:title="@string/torrent_action_force_recheck"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reannounce"
        android:orderInCategory="1"
        android:title="@string/torrent_action_force_reannounce"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_force_start"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/torrent_action_force_start"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_super_seeding"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/torrent_action_super_seeding"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_copy"
        android:orderInCategory="1"
        android:title="@string/torrent_action_copy"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_copy_name"
                android:title="@string/torrent_action_copy_name"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_copy_hash_v1"
                android:title="@string/torrent_action_copy_hash_v1"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_copy_hash_v2"
                android:title="@string/torrent_action_copy_hash_v2"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_copy_magnet"
                android:title="@string/torrent_action_copy_magnet_uri"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_export"
        android:orderInCategory="1"
        android:title="@string/torrent_action_export"
        app:showAsAction="never" />

</menu>
