<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_pause"
        android:icon="@drawable/ic_pause"
        android:title="@string/torrent_list_action_pause"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_resume"
        android:icon="@drawable/ic_resume"
        android:title="@string/torrent_list_action_resume"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/torrent_list_action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_priority"
        android:icon="@drawable/ic_priority"
        android:title="@string/torrent_list_action_priority"
        app:showAsAction="ifRoom">

        <menu tools:ignore="UnusedAttribute">
            <item
                android:id="@+id/menu_priority_maximize"
                android:icon="@drawable/ic_priority_maximize"
                android:title="@string/torrent_list_action_priority_maximize" />

            <item
                android:id="@+id/menu_priority_increase"
                android:icon="@drawable/ic_priority_increase"
                android:title="@string/torrent_list_action_priority_increase" />

            <item
                android:id="@+id/menu_priority_decrease"
                android:icon="@drawable/ic_priority_decrease"
                android:title="@string/torrent_list_action_priority_decrease" />

            <item
                android:id="@+id/menu_priority_minimize"
                android:icon="@drawable/ic_priority_minimize"
                android:title="@string/torrent_list_action_priority_minimize" />
        </menu>

    </item>

    <item
        android:id="@+id/menu_location"
        android:title="@string/torrent_list_action_set_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_set_category"
        android:title="@string/torrent_list_action_set_category"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_select_inverse"
        android:icon="@drawable/ic_select_inverse"
        android:title="@string/action_select_inverse"
        app:showAsAction="ifRoom" />

</menu>
