<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_all"
        android:title="@string/search_result_action_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/search_result_action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/search_result_action_sort_name" />
                <item
                    android:id="@+id/menu_sort_size"
                    android:title="@string/search_result_action_sort_size" />
                <item
                    android:id="@+id/menu_sort_seeders"
                    android:title="@string/search_result_action_sort_seeders" />
                <item
                    android:id="@+id/menu_sort_leechers"
                    android:title="@string/search_result_action_sort_leechers" />
                <item
                    android:id="@+id/menu_sort_search_engine"
                    android:title="@string/search_result_action_sort_search_engine" />
            </group>
            <item
                android:id="@+id/menu_sort_reverse"
                android:checkable="true"
                android:title="@string/search_result_action_sort_reverse" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_search_stop"
        android:icon="@drawable/ic_cancel"
        android:title="@string/search_result_action_stop_search"
        app:showAsAction="ifRoom" />

</menu>
