<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:text="@string/torrent_list_status" />

    <TextView
        android:id="@+id/text_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_all" />

    <TextView
        android:id="@+id/text_downloading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_downloading" />

    <TextView
        android:id="@+id/text_seeding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_seeding" />

    <TextView
        android:id="@+id/text_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_completed" />

    <TextView
        android:id="@+id/text_resumed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_resumed" />

    <TextView
        android:id="@+id/text_paused"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_paused" />

    <TextView
        android:id="@+id/text_stalled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_stalled" />

    <TextView
        android:id="@+id/text_checking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_checking" />

    <TextView
        android:id="@+id/text_moving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_moving" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/torrent_list_status_error" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/listDivider" />

</LinearLayout>
