<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/torrent_trackers_action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_rename"
        android:title="@string/torrent_trackers_action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_select_inverse"
        android:icon="@drawable/ic_select_inverse"
        android:title="@string/action_select_inverse"
        app:showAsAction="ifRoom" />

</menu>
