<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_query"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_start_query"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/search_start_category">

        <dev.bartuzen.qbitcontroller.ui.view.ExposedDropdownTextView
            android:id="@+id/dropdown_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group_plugin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp">

        <RadioButton
            android:id="@+id/radio_plugins_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_start_plugins_enabled" />

        <RadioButton
            android:id="@+id/radio_plugins_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_start_plugins_all" />

        <RadioButton
            android:id="@+id/radio_plugins_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_start_plugins_select" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/listDivider"
        tools:visibility="gone" />

</LinearLayout>
